test/invalidate/index.js
module.exports = function() {
    require('./invalidate.path-sets.spec');
    require('./invalidate.json-sparse.spec');
};
